--- a/my-app/cloudbuild.yaml
+++ b/my-app/cloudbuild.yaml
@@ -1,7 +1,4 @@
 steps:
-  # Build the Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/sit323-23t1-liyanage-1357599/my-flourish', '.']
   # Run unit tests
   - name: 'gcr.io/sit323-23t1-liyanage-1357599/my-flourish'
     args: ['npm', 'test']
@@ -9,4 +6,4 @@ steps:
 
 images:
   # Push the Docker image to Google Container Registry
-  - 'gcr.io/sit323-23t1-liyanage-1357599/my-flourish'
+  - 'gcr.io/sit323-23t1-liyanage-1357599/my-flourish@sha256:24dee7f6f54b8f1aef13f2176bfb88975847e8394a514311ea370e302bb42af8'
